<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_for_sign_in_screen"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/forget_your_password"
        android:textColor="@color/white"
        android:id="@+id/textForgetPassword"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/buttonSignIn"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_for_sign_in_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textForgetPassword"
        android:text="@string/sign_in"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/inputPassword"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/background_for_input"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/buttonSignIn"
        android:hint="@string/password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/inputMobile"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_for_input"
        android:hint="@string/mobile"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/inputPassword"/>
    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_in_to_your_account"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/inputMobile"/>
    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="35dp"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/textSignIn"/>

</androidx.constraintlayout.widget.ConstraintLayout>